# boxed-slice

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: boxed_macro.rs  boxed_slice.rs  lib.rs
