[package]
name = "box_slice"
version = "0.2.0"
edition = "2024"
authors = ["Matteo Dell'Acqua <dellacqua.matteo99@gmail.com>"]
description = "Helpers to create boxed slices without allocating a Vec first"
repository = "https://github.com/MatteoH2O1999/boxed-slice"
license = "MIT"
keywords = ["slice", "box", "boxes", "helpers", "macro"]
categories = ["rust-patterns", "no-std"]
rust-version = "1.93"

[package.metadata.docs.rs]
all-features = true
